massive claude updates

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,16 @@ PI_API_KEY=your-pi-api-key-here
 
 # Database Configuration
 DB_HOST=localhost
-DB_NAME=your_database_name
-DB_USER=your_db_username
-DB_PASS=your_db_password
+DB_NAME=appraisells_db
+DB_USER=root
+DB_PASS=
 
-# Application Configuration
-APP_URL=https://yourdomain.com
-APP_ENV=production
+# Application Configuration - Updated with your ngrok tunnel
+APP_URL=https://4943480ece59.ngrok-free.app
+APP_ENV=development
 
 # Security
 SECRET_KEY=your-secret-key-here
 
-# Debug Mode (set to false in production)
-DEBUG_MODE=false
+# Debug Mode (set to true for development with ngrok)
+DEBUG_MODE=true
