--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 # Enable CORS for all API requests
 Header always set Access-Control-Allow-Origin "*"
 Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
+Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, ngrok-skip-browser-warning"
 
 # Handle preflight OPTIONS requests
 RewriteCond %{REQUEST_METHOD} OPTIONS
@@ -13,6 +13,15 @@ RewriteRule ^(.*)$ $1 [R=200,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^api/(.*)$ api.php/$1 [QSA,L]
+
+# Route direct API endpoints to api.php (for ngrok tunnel usage)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} ^/(subscription-status|auction-bids|user-bid-status|user-wins|calculate-winners|user|digital-art|create-user-profile|approve-payment|complete-payment|auction-bid|place-auction-bid|mark-wins-viewed|health|user-digital-art|log-authentication|sessions|analytics|subscriptions|auction-highest-bids|debug)/
+RewriteRule ^(.*)$ api.php [QSA,L]
+
+# Health check endpoint
+RewriteRule ^health$ api.php [QSA,L]
 
 # Default document
 DirectoryIndex index.html
